# mindbrew

./: .dockerignore  .env.example  .gitignore  .gitmodules  .vercelignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  start.sh  vercel.json
api/: main.py
api/db/: database.py  models.py
api/routes/: sessions.py
api/services/: graph_runner.py  run_registry.py  session_store.py  title_inference.py
data/models/: iYLI647.xml
data/scenarios/: wax_ester_oleate_n_limited.yaml  wax_ester_oleate_open.yaml
mindbrew_v2/: __init__.py  demo_tickets.py  errors.py  graph.py  models.py  paths.py  progress.py  settings.py  telemetry.py
scripts/: check-deploy-prereqs.sh  check-docker-prereqs.sh  deploy-render.sh  deploy-vercel.sh  docker-entrypoint-api.sh  poc-smoke-test.sh  run-migrations.sh
tests/: test_agent_errors.py  test_api_sessions.py  test_bio_links.py  test_checkpoint_summary.py  test_citation_resolver.py  test_confidence.py  test_decision_validation.py  test_display_paths.py  test_eval_harness.py  test_fba_calculation_steps.py  test_fba_metabolite_resolver.py  test_formalize.py  test_gem_model_cache.py  test_gem_paths.py  test_golden_path.py  test_interrupt.py  test_literature_branch.py  test_literature_retrieval.py  test_llm_parse.py  test_no_v1_imports.py  test_pathway_switch.py  test_progress_events.py  test_report.py  test_report_export.py  test_step_restart.py  test_telemetry.py  test_title_inference.py
web/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
(+108 files in other folders)
