[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brewmind"
version = "0.1.0"
description = "Computationally validated pathway blueprint agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres>=2.0",
    "langchain-openai>=0.2",
    "langchain-core>=0.3",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.0",
    "markdown>=3.10.2",
    "xhtml2pdf>=0.2.17",
    "python-docx>=1.2.0",
]

[project.optional-dependencies]
fba = [
    "cobra>=0.29",
    "python-libsbml>=5.20",
    "optlang>=1.8",
]
literature = [
    "bionty>=1.0",
    "lamindb>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]
observability = [
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48",
]

[tool.hatch.build.targets.wheel]
packages = ["mindbrew_v2"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that require live FBA deps and vendor model files",
]

[tool.ruff]
line-length = 100
target-version = "py311"
